# rust-pandoc-types

./: .gitignore  .travis.yml  Cargo.toml  README.md  ser.json
.github/workflows/: test.yml
examples/: definition.rs
src/: definition.rs  lib.rs
src/definition/: extra.rs  iter.rs
tests/: definition.rs  deser.rs  inlines.txt  pandoc_compatibility.rs  tables.txt  tables_uppercase.txt  testsuite_uppercase.txt
