[package]
name = "pandoc_types"
version = "0.3.0"
authors = ["Elliott Slaughter <elliottslaughter@gmail.com>"]
license = "Apache-2.0"
description = "Rust port of pandoc-types"
repository = "https://github.com/elliottslaughter/rust-pandoc-types"
keywords = ["pandoc", "pandoc-types"]
categories = ["text-processing"]
readme = "README.md"
include = ["Cargo.toml", "src/**/*.rs", "tests/**/*.rs", "tests/**/*.txt", "examples/**/*.rs", "README.md", "LICENSE.txt"]
edition = "2018"

[badges]
travis-ci = { repository = "elliottslaughter/rust-pandoc-types" }

[dependencies]
serde = {version = "1.0", features=["derive"]}
serde_json = "1.0"
